hphp/hack/test/typecheck/reactive/print_in_rx2.php.exp
File "print_in_rx2.php", line 6, characters 3-6:
'echo' or 'print' are not allowed in reactive or shallow-reactive functions. (Typing[4226])
