hphp/hack/test/typecheck/reactive/print_in_rx2.php
<?hh // strict

function f()[rx]: void {
  // should be error
  echo 1;
}
